@@ -11,16 +11,18 @@ import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.common.geo.GeoFormatterFactory;
 import org.elasticsearch.common.xcontent.ContextParser;
-import org.elasticsearch.geo.GeoPlugin;
 import org.elasticsearch.geometry.Geometry;
 import org.elasticsearch.index.mapper.Mapper;
 import org.elasticsearch.ingest.Processor;
+import org.elasticsearch.license.License;
 import org.elasticsearch.license.LicenseUtils;
+import org.elasticsearch.license.LicensedFeature;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.plugins.ActionPlugin;
 import org.elasticsearch.plugins.ExtensiblePlugin;
 import org.elasticsearch.plugins.IngestPlugin;
 import org.elasticsearch.plugins.MapperPlugin;
+import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.plugins.SearchPlugin;
 import org.elasticsearch.search.aggregations.bucket.geogrid.GeoHashGridAggregationBuilder;
 import org.elasticsearch.search.aggregations.bucket.geogrid.GeoTileGridAggregationBuilder;
@@ -60,16 +62,21 @@ import org.elasticsearch.xpack.spatial.search.aggregations.support.GeoShapeValue
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
 
 import static java.util.Collections.singletonList;
 
-public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlugin, SearchPlugin, IngestPlugin, ExtensiblePlugin {
-   private final SpatialUsage usage = new SpatialUsage();
+public class SpatialPlugin extends Plugin implements ActionPlugin, MapperPlugin, SearchPlugin, IngestPlugin, ExtensiblePlugin {
+    private final SpatialUsage usage = new SpatialUsage();
+
+    private final LicensedFeature.Momentary GEO_CENTROID_AGG_FEATURE =
+        LicensedFeature.momentary("spatial", "geo-centroid-agg", License.OperationMode.GOLD);
+    private final LicensedFeature.Momentary GEO_GRID_AGG_FEATURE =
+        LicensedFeature.momentary("spatial", "geo-grid-agg", License.OperationMode.GOLD);
+    private final LicensedFeature.Momentary GEO_LINE_AGG_FEATURE =
+        LicensedFeature.momentary("spatial", "geo-line-agg", License.OperationMode.GOLD);
 
     // to be overriden by tests
     protected XPackLicenseState getLicenseState() {
@@ -88,12 +95,11 @@ public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlug
 
     @Override
     public Map<String, Mapper.TypeParser> getMappers() {
-        Map<String, Mapper.TypeParser> mappers = new HashMap<>(super.getMappers());
-        mappers.put(ShapeFieldMapper.CONTENT_TYPE, ShapeFieldMapper.PARSER);
-        mappers.put(PointFieldMapper.CONTENT_TYPE, PointFieldMapper.PARSER);
-        mappers.put(GeoShapeWithDocValuesFieldMapper.CONTENT_TYPE,
-            new GeoShapeWithDocValuesFieldMapper.TypeParser(geoFormatterFactory.get()));
-        return Collections.unmodifiableMap(mappers);
+        return Map.of(
+            ShapeFieldMapper.CONTENT_TYPE, ShapeFieldMapper.PARSER,
+            PointFieldMapper.CONTENT_TYPE, PointFieldMapper.PARSER,
+            GeoShapeWithDocValuesFieldMapper.CONTENT_TYPE, new GeoShapeWithDocValuesFieldMapper.TypeParser(geoFormatterFactory.get())
+        );
     }
 
     @Override
@@ -119,7 +125,7 @@ public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlug
                     GeoLineAggregationBuilder.NAME,
                     GeoLineAggregationBuilder::new,
                     usage.track(SpatialStatsAction.Item.GEOLINE,
-                        checkLicense(GeoLineAggregationBuilder.PARSER, XPackLicenseState.Feature.SPATIAL_GEO_LINE)))
+                        checkLicense(GeoLineAggregationBuilder.PARSER, GEO_LINE_AGG_FEATURE)))
                 .addResultReader(InternalGeoLine::new)
                 .setAggregatorRegistrar(GeoLineAggregationBuilder::registerUsage));
     }
@@ -142,7 +148,7 @@ public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlug
         builder.register(GeoCentroidAggregationBuilder.REGISTRY_KEY, GeoShapeValuesSourceType.instance(),
             (name, valuesSourceConfig, context, parent, metadata)
                 -> {
-                if (getLicenseState().checkFeature(XPackLicenseState.Feature.SPATIAL_GEO_CENTROID)) {
+                if (GEO_CENTROID_AGG_FEATURE.check(getLicenseState())) {
                     return new GeoShapeCentroidAggregator(name, context, parent, valuesSourceConfig, metadata);
                 }
                 throw LicenseUtils.newComplianceException("geo_centroid aggregation on geo_shape fields");
@@ -155,7 +161,7 @@ public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlug
         builder.register(GeoHashGridAggregationBuilder.REGISTRY_KEY, GeoShapeValuesSourceType.instance(),
             (name, factories, valuesSource, precision, geoBoundingBox, requiredSize, shardSize,
                                          aggregationContext, parent, collectsFromSingleBucket, metadata) -> {
-                if (getLicenseState().checkFeature(XPackLicenseState.Feature.SPATIAL_GEO_GRID)) {
+                if (GEO_GRID_AGG_FEATURE.check(getLicenseState())) {
                     final GeoGridTiler tiler;
                     if (geoBoundingBox.isUnbounded()) {
                         tiler = new UnboundedGeoHashGridTiler(precision);
@@ -177,7 +183,7 @@ public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlug
         builder.register(GeoTileGridAggregationBuilder.REGISTRY_KEY, GeoShapeValuesSourceType.instance(),
             (name, factories, valuesSource, precision, geoBoundingBox, requiredSize, shardSize,
                                         context, parent, collectsFromSingleBucket, metadata) -> {
-                if (getLicenseState().checkFeature(XPackLicenseState.Feature.SPATIAL_GEO_GRID)) {
+                if (GEO_GRID_AGG_FEATURE.check(getLicenseState())) {
                     final GeoGridTiler tiler;
                     if (geoBoundingBox.isUnbounded()) {
                         tiler = new UnboundedGeoTileGridTiler(precision);
@@ -205,10 +211,10 @@ public class SpatialPlugin extends GeoPlugin implements ActionPlugin, MapperPlug
         builder.register(CardinalityAggregationBuilder.REGISTRY_KEY, GeoShapeValuesSourceType.instance(), CardinalityAggregator::new, true);
     }
 
-    private <T> ContextParser<String, T> checkLicense(ContextParser<String, T> realParser, XPackLicenseState.Feature feature) {
+    private <T> ContextParser<String, T> checkLicense(ContextParser<String, T> realParser, LicensedFeature.Momentary feature) {
         return (parser, name) -> {
-            if (getLicenseState().checkFeature(feature) == false) {
-                throw LicenseUtils.newComplianceException(feature.name());
+            if (feature.check(getLicenseState()) == false) {
+                throw LicenseUtils.newComplianceException(feature.getName());
             }
             return realParser.parse(parser, name);
         };
